Improve swagger (#28)
* Make requested changes

* Change json.RawMessage to object

* Improve handler commenting
