# cmd/bnsapi/docs/swagger.json
@@ -20,24 +20,14 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/json.RawMessage"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/json.RawMessage"
-                        }
-                    }
+                    "200": {},
+                    "404": {}
                 }
             }
         },
         "/cash/balances": {
             "get": {
-                "summary": "Returns a `bnsd/x/cash.Set` entitiy.",
+                "summary": "returns balances based on iov address",
                 "parameters": [
                     {
                         "type": "string",
@@ -53,24 +43,9 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/json.RawMessage"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/json.RawMessage"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/json.RawMessage"
-                        }
-                    }
+                    "200": {},
+                    "404": {},
+                    "500": {}
                 }
             }
         },
@@ -99,24 +74,9 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/json.RawMessage"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/json.RawMessage"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/json.RawMessage"
-                        }
-                    },
+                    "200": {},
+                    "400": {},
+                    "404": {},
                     "500": {}
                 }
             }
@@ -134,18 +94,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/json.RawMessage"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/json.RawMessage"
-                        }
-                    },
+                    "200": {},
+                    "404": {},
                     "500": {}
                 }
             }
@@ -171,25 +121,15 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/json.RawMessage"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/json.RawMessage"
-                        }
-                    },
+                    "200": {},
+                    "404": {},
                     "500": {}
                 }
             }
         },
         "/username/owner/{ownerAddress}": {
             "get": {
-                "summary": "Returns a `bnsd/username.Token` entitiy.",
+                "summary": "Returns the list of iov starname owned by this iov address",
                 "parameters": [
                     {
                         "type": "string",
@@ -202,27 +142,17 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/json.RawMessage"
+                            "$ref": "#/definitions/username.Token"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/json.RawMessage"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/json.RawMessage"
-                        }
-                    }
+                    "404": {},
+                    "500": {}
                 }
             }
         },
         "/username/resolve/{username}": {
             "get": {
-                "summary": "Returns a `bnsd/username.Token` entity.",
+                "summary": "Returns balances based on iov address.",
                 "parameters": [
                     {
                         "type": "string",
@@ -235,30 +165,62 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/json.RawMessage"
+                            "$ref": "#/definitions/username.Token"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/json.RawMessage"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/json.RawMessage"
-                        }
-                    }
+                    "404": {},
+                    "500": {}
                 }
             }
         }
     },
     "definitions": {
-        "json.RawMessage": {
+        "username.BlockchainAddress": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "description": "An address on the specified blockchain network. Address is not a\nweave.Address as we cannot know what is the format of an address on the\nchain that this token instance links to. Because we do not know the rules\nto validate an address for any blockchain ID, this is an arbitrary bulk of\ndata.\nIt is more convinient to always use encoded representation of each address\nand store it as a string. Using bytes while compact is not as comfortable\nto use.",
+                    "type": "string"
+                },
+                "blockchain_id": {
+                    "description": "An arbitrary blockchain ID.",
+                    "type": "string"
+                }
+            }
+        },
+        "username.Token": {
+            "type": "object",
+            "properties": {
+                "metadata": {
+                    "type": "object",
+                    "$ref": "#/definitions/weave.Metadata"
+                },
+                "owner": {
+                    "description": "Owner is a weave.Address that controls this token. Only the owner can\nmodify a username token.",
+                    "type": "object",
+                    "$ref": "#/definitions/weave.Address"
+                },
+                "targets": {
+                    "description": "Targets specifies where this username token points to. This must be at\nleast one blockchain address elemenet.",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/username.BlockchainAddress"
+                    }
+                }
+            }
+        },
+        "weave.Address": {
             "type": "array",
             "items": {
                 "type": "integer"
+            }
+        },
+        "weave.Metadata": {
+            "type": "object",
+            "properties": {
+                "schema": {
+                    "type": "integer"
+                }
             }
         }
     }
